fixing white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,8 @@ body{
 .sidebar {
 	position: fixed;
 	top: 0px;
-	padding-top: 10%;
+	padding-top: 0%;
+	z-index : 99999;
 	background-color: #2c3e50;
 	color: #fff;
 }
